fix typo, OPTMIZATION -> OPTIMIZATION

--- a/examples/advanced-tour.ipynb
+++ b/examples/advanced-tour.ipynb
@@ -427,7 +427,7 @@
     "my_observer = BasicObserver()\n",
     "\n",
     "optimizer.subscribe(\n",
-    "    event=Events.OPTMIZATION_STEP,\n",
+    "    event=Events.OPTIMIZATION_STEP,\n",
     "    subscriber=my_observer,\n",
     "    callback=None, # Will use the `update` method as callback\n",
     ")"
@@ -450,7 +450,7 @@
     "    print(\"Go nuts here!\")\n",
     "\n",
     "optimizer.subscribe(\n",
-    "    event=Events.OPTMIZATION_START,\n",
+    "    event=Events.OPTIMIZATION_START,\n",
     "    subscriber=\"Any hashable object\",\n",
     "    callback=my_callback,\n",
     ")"
@@ -466,9 +466,9 @@
      "output_type": "stream",
      "text": [
       "Go nuts here!\n",
-      "Event `optmization:step` was observed\n",
-      "Event `optmization:step` was observed\n",
-      "Event `optmization:step` was observed\n"
+      "Event `optimization:step` was observed\n",
+      "Event `optimization:step` was observed\n",
+      "Event `optimization:step` was observed\n"
      ]
     }
    ],
@@ -491,7 +491,7 @@
     {
      "data": {
       "text/plain": [
-       "['optmization:start', 'optmization:step', 'optmization:end']"
+       "['optimization:start', 'optimization:step', 'optimization:end']"
       ]
      },
      "execution_count": 20,
