--- a/examples/basic-tour.ipynb
+++ b/examples/basic-tour.ipynb
@@ -346,7 +346,7 @@
    "outputs": [],
    "source": [
     "logger = JSONLogger(path=\"./logs.json\")\n",
-    "optimizer.subscribe(Events.OPTMIZATION_STEP, logger)"
+    "optimizer.subscribe(Events.OPTIMIZATION_STEP, logger)"
    ]
   },
   {
