Fix readme & example: .logger import JSONLogger - Issue #181

--- a/examples/basic-tour.ipynb
+++ b/examples/basic-tour.ipynb
@@ -322,7 +322,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from bayes_opt.observer import JSONLogger\n",
+    "from bayes_opt.logger import JSONLogger\n",
     "from bayes_opt.event import Events"
    ]
   },
